--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ git:
   depth: 1
 
 before_install:
+  - go get -u github.com/go-bindata/go-bindata
   - go get -u github.com/go-bindata/go-bindata/...
 
 script:
